--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
            <button class="header-btn">Shop Now</button>
            </div>
 
-           <img class="header-img" src="flower asset/pngwing 10.png">
+           <img class="header-img" src="./flower asset/pngwing 10.png">
 
         </div>
     </header>
@@ -35,15 +35,15 @@
             </div>
             <div class="feature-list">
                 <div>
-                <img class="lone" src="flower asset/pngwing 6.png">
+                <img class="lone" src="./flower asset/pngwing 6.png">
                 <h3 class="lhead">Pink Flower Tree</h3>
                 </div>
                 <div>
-                <img class="ltwo" src="flower asset/pngwing 5.png">
+                <img class="ltwo" src="./flower asset/pngwing 5.png">
                 <h3 class="lhead">Buket</h3>
                 </div>
                 <div>
-                <img class="lthree" src="flower asset/pngwing 7.png">
+                <img class="lthree" src="./flower asset/pngwing 7.png">
                 <h3 class="lhead">Yellow Flower Tree</h3>
                 </div>
                 
@@ -61,7 +61,7 @@
                 <p class="deals-pera">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <button class="deals-button">Sign Up</button>
             </div>
-            <img src="flower asset/pngwing 8.png">
+            <img src="./flower asset/pngwing 8.png">
            </div>
 
          </section>
@@ -74,16 +74,16 @@
         
         <section class="container">
              <div>
-                <img class="containerp" src="flower asset/flower 01.png">
+                <img class="containerp" src="./flower asset/flower 01.png">
              </div>
              <div>
-                <img class="containerp" src="flower asset/rectangle 4.png">
+                <img class="containerp" src="./flower asset/rectangle 4.png">
              </div>
              <div>
-                <img class="containerp" src="flower asset/rectangle 5.png">
+                <img class="containerp" src="./flower asset/rectangle 5.png">
              </div>
              <div>
-                <img class="containerp" src="flower asset/rectangle 6.png">
+                <img class="containerp" src="./flower asset/rectangle 6.png">
              </div>
              </section>
 
