--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <img class="containerp" src="./Flower Asset/Rectangle 5.png">
              </div>
              <div>
-                <img class="containerp" src="./flower asset/rectangle 6.png">
+                <img class="containerp" src="./Flower Asset/Rectangle 6.png">
              </div>
              </section>
 
